# ibackupy

./: .gitignore  README.md  pyproject.toml
demo/: README.md  home.py  requirements.txt
demo/pages/: app_path_tree.py  space_treemap.py
ibackupy/: __init__.py  backup.py
